--- a/src/main/resources/templates/pages/login/home.html
+++ b/src/main/resources/templates/pages/login/home.html
@@ -18,106 +18,188 @@
 <body>
 
     <!-- Menu -->
-        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between  mb-4 border-bottom bg-dark opacity-75">
+        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between  mb-4 border-bottom bg-dark opacity-75 sticky-top">
             <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
                 <!--<svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>-->
                 <img src="img/logo/logo.png" width="100" height="80" >
             </a>
 
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0" >
-                <li><a href="#" class="nav-link px-2 link-light" >Home</a></li>
-                <li><a href="#" class="nav-link px-2 link-light">Features</a></li>
-                <li><a href="#" class="nav-link px-2 link-light">Pricing</a></li>
-                <li><a href="#" class="nav-link px-2 link-light">FAQs</a></li>
-                <li><a href="#" class="nav-link px-2 link-light">About</a></li>
+                <li><a href="#about1" class="nav-link px-2 link-light" >Что вы получаете</a></li>
+                <li><a href="#" class="nav-link px-2 link-light">Направления</a></li>
+                <li><a href="#" class="nav-link px-2 link-light">Обучение</a></li>
+                <li><a href="#" class="nav-link px-2 link-light">Трудоустройство</a></li>
+                <li><a href="#reg" class="nav-link px-2 link-light">Контакты</a></li>
+                <li><a href="#" class="nav-link px-2 link-light">FAQ</a></li>
             </ul>
 
             <div class="col-md-3 text-end p-3">
                 <button type="button" class="btn btn-outline-success me-2">Login</button>
-                <button type="button" class="btn btn-success">Sign-up</button>
+                <a href="#reg"><button type="button" class="btn btn-success">Registration</button></a>
             </div>
         </header>
     <!-- Hero -->
     <section id="hero">
         <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
             <div class="col-md-5 p-lg-5 mx-auto my-5">
-                <h1 class="display-4 fw-normal">Punny headline</h1>
-                <p class="lead fw-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple’s marketing pages.</p>
-                <a class="btn btn-outline-secondary" href="#">Coming soon</a>
+                <h1 class="display-2 fw-normal">Школа 21</h1>
+                <h6 >online</h6>
+                <p class="lead fw-normal">
+                    Найти себя в ИТ | Получить практические знания
+                </p>
+                <a class="btn btn-outline-secondary" href="#reg">Хочу поступить</a>
             </div>
             <div class="product-device shadow-sm d-none d-md-block"></div>
             <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
         </div>
+
     </section>
-    <!-- Divider -->
-    <div class="b-example-divider"></div>
-    <!-- About -->
-    <section id="about">
-        <div class="bg-dark text-secondary px-4 py-5 text-center opacity-75">
+    <!-- Что вы получаете -->
+    <section id="about1">
+        <div class="bg-dark text-secondary px-4 py-5 text-left opacity-75">
+
             <div class="py-5">
-                <h1 class="display-5 fw-bold text-white">Dark mode hero</h1>
-                <div class="col-lg-6 mx-auto">
-                    <p class="fs-5 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
-                    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                        <button type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Custom button</button>
-                        <button type="button" class="btn btn-outline-light btn-lg px-4">Secondary</button>
-                    </div>
+                <h2 class="display-5 fw-bold text-white">Что вы получаете</h2>
+
+                <div class="col-lg-6 ">
+                    <p class="fs-5 mb-4">
+                        Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
+                        popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid
+                        system, extensive prebuilt components, and powerful JavaScript plugins.
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- Вы сможете изучить е -->
+    <section id="about2">
+        <div class="bg-light text-dark px-4 py-5 text-left ">
+
+            <div class="py-5">
+                <h2 class="display-5 fw-bold text-dark">Вы сможете изучить</h2>
+
+                <div class="col-lg-6 ">
+                    <p class="fs-5 mb-4">
+                        Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
+                        popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid
+                        system, extensive prebuilt components, and powerful JavaScript plugins.
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!--Принципы обучения / / Как проходит обучени-->
+    <section id="about3">
+        <div class="bg-dark text-secondary px-4 py-5 text-left opacity-75">
+
+            <div class="py-5">
+                <h2 class="display-5 fw-bold text-white">Принципы обучения</h2>
+
+                <div class="col-lg-6 ">
+                    <p class="fs-5 mb-4">
+                        Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
+                        popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid
+                        system, extensive prebuilt components, and powerful JavaScript plugins.
+                    </p>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="bg-light text-dark px-4 py-5 text-left ">
+
+            <div class="py-5">
+                <h2 class="display-5 fw-bold text-dark">Как проходит обучение</h2>
+
+                <div class="col-lg-6 ">
+                    <p class="fs-5 mb-4">
+                        Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
+                        popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid
+                        system, extensive prebuilt components, and powerful JavaScript plugins.
+                    </p>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- Трудоустройство -->
+    <section id="about4">
+    <div class="bg-light text-dark px-4 py-5 text-left ">
+
+        <div class="py-5">
+            <h2 class="display-5 fw-bold text-dark">Трудоустройство</h2>
+
+            <div class="col-lg-6 ">
+                <p class="fs-5 mb-4">
+                    Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
+                    popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid
+                    system, extensive prebuilt components, and powerful JavaScript plugins.
+                </p>
+            </div>
+
+        </div>
+    </div>
+    </section>
+
+
+    <!-- Form -->
+    <section>
+        <div class="container col-xl-10 col-xxl-8 px-4 py-5 bg-dark opacity-75 rounded-5 text-light" id="reg">
+            <div class="row align-items-center g-lg-5 py-5">
+                <div class="col-lg-7 text-center text-lg-start">
+                    <h1 class="display-4 fw-bold lh-1 mb-3">Vertically centered hero sign-up form</h1>
+                    <p class="col-lg-10 fs-4">Below is an example form built entirely with Bootstrap’s form controls.
+                        Each required form group has a validation state that can be triggered by attempting to submit
+                        the form without completing it.</p>
+                </div>
+                <div class="col-md-10 mx-auto col-lg-5">
+                    <form class="p-4 p-md-5 border rounded-5 " action="/" method="post">
+
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" name="lastname" id="lastname"
+                                   placeholder="lastname">
+                            <label for="lastname">Lastname</label>
+                        </div>
+
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" name="name" id="name" placeholder="name">
+                            <label for="name">Name</label>
+                        </div>
+
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control" name="login" id="login" placeholder="login">
+                            <label for="login">Login</label>
+                        </div>
+
+
+                        <div class="form-floating mb-3">
+                            <input type="tel" class="form-control" name="tel" id="tel" placeholder="+7 (966) 999 99 99">
+                            <label for="tel">Tel:</label>
+                        </div>
+
+                        <div class="form-floating mb-3">
+                            <input type="email" class="form-control" name="email" id="email"
+                                   placeholder="name@example.com">
+                            <label for="email">Email address</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="password" class="form-control" name="password" id="password"
+                                   placeholder="Password">
+                            <label for="password">Password</label>
+                        </div>
+
+                        <button class="w-100 btn btn-lg btn-success" type="submit">I want learn!</button>
+                        <hr class="my-4">
+                        <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
+                    </form>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Divider -->
-    <div class="b-example-divider"></div>
 
-    <!-- Form -->
-    <div class="container col-xl-10 col-xxl-8 px-4 py-5">
-        <div class="row align-items-center g-lg-5 py-5">
-            <div class="col-lg-7 text-center text-lg-start">
-                <h1 class="display-4 fw-bold lh-1 mb-3">Vertically centered hero sign-up form</h1>
-                <p class="col-lg-10 fs-4">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
-            </div>
-            <div class="col-md-10 mx-auto col-lg-5">
-                <form class="p-4 p-md-5 border rounded-5 bg-dark opacity-75" action="/" method="post">
-
-                    <div class="form-floating mb-3">
-                        <input type="text" class="form-control" name="lastname" id="lastname" placeholder="lastname">
-                        <label for="lastname">Lastname</label>
-                    </div>
-
-                    <div class="form-floating mb-3">
-                        <input type="text" class="form-control" name="name" id="name" placeholder="name">
-                        <label for="name">Name</label>
-                    </div>
-
-                    <div class="form-floating mb-3">
-                        <input type="text" class="form-control" name="login" id="login" placeholder="login">
-                        <label for="login">Login</label>
-                    </div>
-
-
-                    <div class="form-floating mb-3">
-                        <input type="tel" class="form-control" name="tel" id="tel" placeholder="+7 (966) 999 99 99">
-                        <label for="tel">Tel:</label>
-                    </div>
-
-                    <div class="form-floating mb-3">
-                        <input type="email" class="form-control" name="email" id="email" placeholder="name@example.com">
-                        <label for="email">Email address</label>
-                    </div>
-                    <div class="form-floating mb-3">
-                        <input type="password" class="form-control" name="password" id="password" placeholder="Password">
-                        <label for="password">Password</label>
-                    </div>
-
-                    <button class="w-100 btn btn-lg btn-success" type="submit">I want learn!</button>
-                    <hr class="my-4">
-                    <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
-                </form>
-            </div>
-        </div>
-    </div>
-    <!-- Divider -->
-    <div class="b-example-divider"></div>
     <!-- FAQ -->
     <section id="faq">
         <h2 class="display-4">FAQ</h2>
