--- a/src/main/resources/templates/pages/login/home.html
+++ b/src/main/resources/templates/pages/login/home.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title th:text="${title}"></title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <style>
@@ -26,15 +26,15 @@
 
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0" >
                 <li><a href="#about1" class="nav-link px-2 link-light" >Что вы получаете</a></li>
-                <li><a href="#" class="nav-link px-2 link-light">Направления</a></li>
-                <li><a href="#" class="nav-link px-2 link-light">Обучение</a></li>
-                <li><a href="#" class="nav-link px-2 link-light">Трудоустройство</a></li>
+                <li><a href="#about2" class="nav-link px-2 link-light">Направления</a></li>
+                <li><a href="#about3" class="nav-link px-2 link-light">Обучение</a></li>
+                <li><a href="#about4" class="nav-link px-2 link-light">Трудоустройство</a></li>
                 <li><a href="#reg" class="nav-link px-2 link-light">Контакты</a></li>
-                <li><a href="#" class="nav-link px-2 link-light">FAQ</a></li>
+                <li><a href="#faq" class="nav-link px-2 link-light">FAQ</a></li>
             </ul>
 
             <div class="col-md-3 text-end p-3">
-                <button type="button" class="btn btn-outline-success me-2">Login</button>
+                <a href="#"><button type="button" class="btn btn-outline-success me-2">Login</button></a>
                 <a href="#reg"><button type="button" class="btn btn-success">Registration</button></a>
             </div>
         </header>
@@ -90,7 +90,6 @@
             </div>
         </div>
     </section>
-
     <!--Принципы обучения / / Как проходит обучени-->
     <section id="about3">
         <div class="bg-dark text-secondary px-4 py-5 text-left opacity-75">
@@ -143,11 +142,9 @@
         </div>
     </div>
     </section>
-
-
     <!-- Form -->
-    <section>
-        <div class="container col-xl-10 col-xxl-8 px-4 py-5 bg-dark opacity-75 rounded-5 text-light" id="reg">
+    <section id="reg">
+        <div class="container col-xl-10 col-xxl-8 px-4 py-5 bg-dark opacity-75 rounded-5 text-light" >
             <div class="row align-items-center g-lg-5 py-5">
                 <div class="col-lg-7 text-center text-lg-start">
                     <h1 class="display-4 fw-bold lh-1 mb-3">Vertically centered hero sign-up form</h1>
@@ -199,44 +196,62 @@
             </div>
         </div>
     </section>
-
     <!-- FAQ -->
     <section id="faq">
         <h2 class="display-4">FAQ</h2>
     <div class="accordion" id="accordionExample">
+
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                    Accordion Item #1
+                    Как выглядит процесс обучения в Школе 21?
                 </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    Итак, вы успешно прошли интенсив и зачислены на основное обучение. Что вас
+                    ждет? В первые 12-15 месяцев вам будут доступны проекты следующих направлений: структурное
+                    программирование (С), объектно-ориентированное программирование (С++), компьютерные сети, алгоритмы,
+                    базы данных(SQL) и прикладное программирование (java, Python, Golang, C#) После чего наступает время
+                    стажировки, она так же является учебным проектом и будет длиться 3 месяца. Где проходить стажировку
+                    вы решаете сами. После стажировки в вашем персональном учебном плане откроются ветки для изучения
+                    дополнительных направлений и языков:
                 </div>
             </div>
         </div>
+
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingTwo">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    Accordion Item #2
+                    Каковы основные требования для поступления?
                 </button>
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    Мы не судим о способностях по школьным или университетским оценкам, поэтому
+                    не попросим вас предоставить аттестат или диплом о высшем образовании. Вместо этого мы предложим
+                    пройти онлайн -игры— они лучше выявляют необходимые для программиста способности.
+                    После игр необходимо присутствовать на онлайн встрече с командой Школы, которая проходит в формате
+                    вебинара. На ней вы узнаете все о поступлении и обучении. Далее вы записываете короткое видеоинтервью,
+                    которое состоит из двух вопросов. Подав документы, вы попадаете на интенсив продолжительностью 26 дней
+                    — пробный период обучения. После прохождения отборочного интенсива самые талантливые и мотивированные
+                    участники зачисляются в Школу 21.
                 </div>
             </div>
         </div>
+
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingThree">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Accordion Item #3
+                    Почему обучение в Школе 21 — бесплатное?
                 </button>
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    Не всегда у талантливых людей есть финансовые возможности получить достойное образование. Сбер, как
+                    социально ответственная компания, предоставляет такую возможность каждому талантливому молодому человеку в России.
+                    Мы гордимся тем, что нам досталась привилегия участвовать в создании нашего будущего — помогать
+                    вырастить новое поколение профессионалов.
                 </div>
             </div>
         </div>
