--- a/src/main/resources/templates/pages/login/login.html
+++ b/src/main/resources/templates/pages/login/login.html
@@ -3,7 +3,7 @@
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Login</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
@@ -11,25 +11,12 @@
 <!-- Menu -->
 <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between  mb-4 border-bottom bg-dark opacity-75 sticky-top">
     <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-        <!--<svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>-->
         <img src="img/logo/logo.png" width="100" height="80">
     </a>
 
-    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#about1" class="nav-link px-2 link-light">Что вы получаете</a></li>
-        <li><a href="#about2" class="nav-link px-2 link-light">Направления</a></li>
-        <li><a href="#about3" class="nav-link px-2 link-light">Обучение</a></li>
-        <li><a href="#about4" class="nav-link px-2 link-light">Трудоустройство</a></li>
-        <li><a href="#reg" class="nav-link px-2 link-light">Контакты</a></li>
-        <li><a href="#faq" class="nav-link px-2 link-light">FAQ</a></li>
-    </ul>
-
     <div class="col-md-3 text-end p-3">
-        <a href="/dashboard">
-            <button type="button" class="btn btn-outline-success me-2">Login</button>
-        </a>
-        <a href="/logout">
-            <button type="button" class="btn btn-success">Logout</button>
+        <a href="/#reg">
+            <button type="button" class="btn btn-success">Registration</button>
         </a>
     </div>
 </header>
@@ -39,7 +26,7 @@
 <br>
 <br>
 <br>
-<section id="reg">
+<section id="log">
     <div class="container col-xl-10 col-xxl-8 px-4 py-5 bg-dark opacity-75 rounded-5 text-light">
         <div class="row align-items-center g-lg-5 py-5">
             <div class="col-lg-7 text-center text-lg-start">
@@ -82,53 +69,7 @@
 <br>
 <br>
 <!-- Footer -->
-<footer class="container-fluid bg-dark opacity-75">
-    <div class="row">
-        <div class="col-12 col-md">
-            <!--<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mb-2" role="img" viewBox="0 0 24 24"><title>Product</title><circle cx="12" cy="12" r="10"></circle><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"></path></svg>-->
-            <img src="img/logo/logo.png" width="100" height="80">
-            <small class="d-block mb-3 text-muted">© 2017–2022</small>
-        </div>
-        <div class="col-6 col-md">
-            <h5>Features</h5>
-            <ul class="list-unstyled text-small">
-                <li><a class="link-secondary" href="#">Cool stuff</a></li>
-                <li><a class="link-secondary" href="#">Random feature</a></li>
-                <li><a class="link-secondary" href="#">Team feature</a></li>
-                <li><a class="link-secondary" href="#">Stuff for developers</a></li>
-                <li><a class="link-secondary" href="#">Another one</a></li>
-                <li><a class="link-secondary" href="#">Last time</a></li>
-            </ul>
-        </div>
-        <div class="col-6 col-md">
-            <h5>Resources</h5>
-            <ul class="list-unstyled text-small">
-                <li><a class="link-secondary" href="#">Resource name</a></li>
-                <li><a class="link-secondary" href="#">Resource</a></li>
-                <li><a class="link-secondary" href="#">Another resource</a></li>
-                <li><a class="link-secondary" href="#">Final resource</a></li>
-            </ul>
-        </div>
-        <div class="col-6 col-md">
-            <h5>Resources</h5>
-            <ul class="list-unstyled text-small">
-                <li><a class="link-secondary" href="#">Business</a></li>
-                <li><a class="link-secondary" href="#">Education</a></li>
-                <li><a class="link-secondary" href="#">Government</a></li>
-                <li><a class="link-secondary" href="#">Gaming</a></li>
-            </ul>
-        </div>
-        <div class="col-6 col-md">
-            <h5>About</h5>
-            <ul class="list-unstyled text-small">
-                <li><a class="link-secondary" href="#">Team</a></li>
-                <li><a class="link-secondary" href="#">Locations</a></li>
-                <li><a class="link-secondary" href="#">Privacy</a></li>
-                <li><a class="link-secondary" href="#">Terms</a></li>
-            </ul>
-        </div>
-    </div>
-</footer>
+<footer th:insert="blocks/footer/footer :: footer"></footer>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
