--- a/src/main/resources/templates/pages/dashboard/dashboard.html
+++ b/src/main/resources/templates/pages/dashboard/dashboard.html
@@ -1,87 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title th:text="${title}"></title>
     <!-- CSS only -->
+   <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
+
 </head>
 <body>
 <!-- Menu -->
-<header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between  mb-4 border-bottom bg-dark opacity-75 sticky-top">
-    <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-        <!--<svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>-->
-        <img src="img/logo/logo.png" width="100" height="80">
-    </a>
-
-    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#about1" class="nav-link px-2 link-light">Что вы получаете</a></li>
-        <li><a href="#about2" class="nav-link px-2 link-light">Направления</a></li>
-        <li><a href="#about3" class="nav-link px-2 link-light">Обучение</a></li>
-        <li><a href="#about4" class="nav-link px-2 link-light">Трудоустройство</a></li>
-        <li><a href="#reg" class="nav-link px-2 link-light">Контакты</a></li>
-        <li><a href="#faq" class="nav-link px-2 link-light">FAQ</a></li>
-    </ul>
-
-    <div class="col-md-3 text-end p-3">
-        <a href="/dashboard">
-            <button type="button" class="btn btn-outline-success me-2">Login</button>
-        </a>
-        <a href="/logout">
-            <button type="button" class="btn btn-success">Logout</button>
-        </a>
-    </div>
-</header>
+<div th:insert="blocks/header/header :: header" class="sticky-top"></div>
 <!-- Content -->
 
 <!-- Footer -->
-<footer class="container-fluid bg-dark opacity-75">
-    <div class="row">
-        <div class="col-12 col-md">
-            <!--<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mb-2" role="img" viewBox="0 0 24 24"><title>Product</title><circle cx="12" cy="12" r="10"></circle><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"></path></svg>-->
-            <img src="img/logo/logo.png" width="100" height="80">
-            <small class="d-block mb-3 text-muted">© 2017–2022</small>
-        </div>
-        <div class="col-6 col-md">
-            <h5>Features</h5>
-            <ul class="list-unstyled text-small">
-                <li><a class="link-secondary" href="#">Cool stuff</a></li>
-                <li><a class="link-secondary" href="#">Random feature</a></li>
-                <li><a class="link-secondary" href="#">Team feature</a></li>
-                <li><a class="link-secondary" href="#">Stuff for developers</a></li>
-                <li><a class="link-secondary" href="#">Another one</a></li>
-                <li><a class="link-secondary" href="#">Last time</a></li>
-            </ul>
-        </div>
-        <div class="col-6 col-md">
-            <h5>Resources</h5>
-            <ul class="list-unstyled text-small">
-                <li><a class="link-secondary" href="#">Resource name</a></li>
-                <li><a class="link-secondary" href="#">Resource</a></li>
-                <li><a class="link-secondary" href="#">Another resource</a></li>
-                <li><a class="link-secondary" href="#">Final resource</a></li>
-            </ul>
-        </div>
-        <div class="col-6 col-md">
-            <h5>Resources</h5>
-            <ul class="list-unstyled text-small">
-                <li><a class="link-secondary" href="#">Business</a></li>
-                <li><a class="link-secondary" href="#">Education</a></li>
-                <li><a class="link-secondary" href="#">Government</a></li>
-                <li><a class="link-secondary" href="#">Gaming</a></li>
-            </ul>
-        </div>
-        <div class="col-6 col-md">
-            <h5>About</h5>
-            <ul class="list-unstyled text-small">
-                <li><a class="link-secondary" href="#">Team</a></li>
-                <li><a class="link-secondary" href="#">Locations</a></li>
-                <li><a class="link-secondary" href="#">Privacy</a></li>
-                <li><a class="link-secondary" href="#">Terms</a></li>
-            </ul>
-        </div>
-    </div>
-</footer>
+<footer th:insert="blocks/footer/footer :: footer"></footer>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
