--- a/src/main/resources/templates/blocks/home/faq.html
+++ b/src/main/resources/templates/blocks/home/faq.html
@@ -1,6 +1,7 @@
 <!-- FAQ -->
 <div th:fragment="faq">
-    <h2 class="display-4">FAQ</h2>
+    <div class="bg-light text-dark px-4 py-5 text-left ">
+    <h2 class="display-3 fw-bold">FAQ</h2>
     <div class="accordion" id="accordionExample">
 
         <div class="accordion-item">
@@ -67,5 +68,6 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
 </div>
