--- a/src/main/resources/templates/blocks/home/hero.html
+++ b/src/main/resources/templates/blocks/home/hero.html
@@ -1,15 +1,58 @@
 <!-- Hero -->
 <div th:fragment="hero">
+    <div class="container-fluid"
+         style="height: 600px;">
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-xl-6 col-xxl-6">
+                <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center">
+                    <div class="row">
+                        <div class="col-9">
+                            <h1 class="display-1 fw-bold text-end">Школа 21</h1>
+                        </div>
+                        <div class="col-1">
+                            <h4 class="fw-bold text-start">online</h4>
+                        </div>
+                    </div>
+                    <h5 class="text-secondary fw-bold">программирование с нуля для тех, кто хочет</h5>
+                    <br>
+                    <h6 class="text-primary fw-bold">Сменить профессию | Найти себя в ИТ | Получить практические
+                        знания</h6>
+                    <br>
+                    <a href="#reg">
+                        <button class="btn btn-success">Хочу поступить</button>
+                    </a>
+                    <br>
+                    <br>
+                    <ul class="text-start text-secondary fw-bold">
+                        <li>Без менторов и оценок</li>
+                        <li>Бесплатно</li>
+                        <li>Индивидуальный график</li>
+                        <li>Обучение по методике "Равный - равному"</li>
+                        <li>Предложение о работе во время обучения</li>
+                    </ul>
+                </div>
+
+
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-6 col-xl-6 col-xxl-6"
+                 style="background-image: url(../img/home/top-green.svg);">
+            </div>
+
+        </div>
+    </div>
+</div>
+    <!--
     <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+
         <div class="col-md-5 p-lg-5 mx-auto my-5">
-            <h1 class="display-2 fw-normal">Школа 21</h1>
+            <h1 class="display-4 fw-normal">Школа 21</h1>
             <h6>online</h6>
             <p class="lead fw-normal">
                 Найти себя в ИТ | Получить практические знания
             </p>
             <a class="btn btn-outline-secondary" href="#reg">Хочу поступить</a>
         </div>
+
         <div class="product-device shadow-sm d-none d-md-block"></div>
         <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
-    </div>
-</div>
+    </div>-->
