--- a/src/main/resources/templates/blocks/home/reg.html
+++ b/src/main/resources/templates/blocks/home/reg.html
@@ -1,12 +1,10 @@
 <!-- Registration form -->
-<div th:fragment="reg">
-    <div class="container col-xl-10 col-xxl-8 px-4 py-5 bg-dark opacity-75 rounded-5 text-light">
+<div th:fragment="reg" class="bg-light" style="background-image: url(../img/home/top-green.svg);">
+    <div class="container col-xl-10 col-xxl-8 px-4 py-5 bg-dark rounded-5 text-light">
         <div class="row align-items-center g-lg-5 py-5">
             <div class="col-lg-7 text-center text-lg-start">
-                <h1 class="display-4 fw-bold lh-1 mb-3">Vertically centered hero sign-up form</h1>
-                <p class="col-lg-10 fs-4">Below is an example form built entirely with Bootstrap’s form controls.
-                    Each required form group has a validation state that can be triggered by attempting to submit
-                    the form without completing it.</p>
+                <h1 class="display-4 fw-bold lh-1 mb-3">Поступи в Школу 21 сегодня</h1>
+                <p class="col-lg-10 fs-4">Заявка на поступление рассматривается нашими администраторами в течении недели</p>
             </div>
             <div class="col-md-10 mx-auto col-lg-5">
                 <form class="p-4 p-md-5 border rounded-5 " action="/" method="post">
