--- a/src/main/resources/templates/pages/login/home.html
+++ b/src/main/resources/templates/pages/login/home.html
@@ -29,11 +29,11 @@
 </section>
 <!-- Вы сможете изучить -->
 <section id="about2">
-    <div th:insert="blocks/home/about2 :: about2"></div>
+   <!-- <div th:insert="blocks/home/about2 :: about2"></div>-->
 </section>
 <!--Принципы обучения / / Как проходит обучениe-->
 <section id="about3">
-    <div th:insert="blocks/home/about3 :: about3"></div>
+    <!--<div th:insert="blocks/home/about3 :: about3"></div>-->
 </section>
 <!-- Трудоустройство -->
 <section id="about4">
