--- a/src/main/resources/templates/pages/login/login.html
+++ b/src/main/resources/templates/pages/login/login.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 <!-- Menu -->
-<header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between  mb-4 border-bottom bg-dark opacity-75 sticky-top">
+<header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between  mb-4 border-bottom bg-dark sticky-top">
     <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-        <img src="img/logo/logo.png" width="100" height="80">
+        <img src="img/logo/logo.svg" width="100" height="80" class="mt-2 mb-2">
     </a>
 
     <div class="col-md-3 text-end p-3">
@@ -22,12 +22,15 @@
 </header>
 <!-- Content -->
 <!-- Form -->
-<br>
-<br>
-<br>
-<br>
-<section id="log">
-    <div class="container col-xl-10 col-xxl-8 px-4 py-5 bg-dark opacity-75 rounded-5 text-light">
+
+<section id="log" >
+
+    <div style="background-image: url(../img/home/top-green.svg);">
+        <br>
+        <br>
+        <br>
+        <br>
+    <div class="container col-xl-10 col-xxl-8 px-4 py-5 bg-dark rounded-5 text-light" >
         <div class="row align-items-center g-lg-5 py-5">
             <div class="col-lg-7 text-center text-lg-start">
                 <h1 class="display-4 fw-bold lh-1 mb-3">
@@ -63,11 +66,13 @@
             </div>
         </div>
     </div>
+        <br>
+        <br>
+        <br>
+        <br>
+    </div>
 </section>
-<br>
-<br>
-<br>
-<br>
+
 <!-- Footer -->
 <footer th:insert="blocks/footer/footer :: footer"></footer>
 <!-- JavaScript Bundle with Popper -->
