--- a/src/main/resources/templates/blocks/home/about1.html
+++ b/src/main/resources/templates/blocks/home/about1.html
@@ -1,16 +1,31 @@
 <!-- Что вы получаете -->
 <div th:fragment="about1">
-    <div class="bg-dark text-secondary px-4 py-5 text-left opacity-75">
+    <div class="bg-dark text-secondary px-4 py-5 text-left " style="background-image: url(img/home/bg.webp);">
 
         <div class="py-5">
             <h2 class="display-5 fw-bold text-white">Что вы получаете</h2>
-
-            <div class="col-lg-6 ">
-                <p class="fs-5 mb-4">
-                    Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
-                    popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid
-                    system, extensive prebuilt components, and powerful JavaScript plugins.
-                </p>
+            <br>
+            <div class="row ">
+                <div class="container col-xs-12 col-sm-12 col-md-12 col-xl-3 col-xxl-3 bg-light rounded-5 p-3 mt-3" >
+                    <h3 class="text-primary fw-bold"> Гарантированную стажировку </h3>
+                    <p>
+                        В программе обучения стажировка 3 месяца. Участникам оказывается помощь в поиске оплачиваемой
+                        стажировки, соответствующей выбранному направлению обучения.
+                    </p>
+                </div>
+                <div class="container col-xs-12 col-sm-12 col-md-12 col-xl-3 col-xxl-3 bg-light rounded-5 p-3 mt-3" >
+                    <h3 class="text-primary fw-bold"> Вся учеба online </h3>
+                    <p>
+                        Не нужно не куда ездить. Учитесь там где вам удобно
+                    </p>
+                </div>
+                <div class="container col-xs-12 col-sm-12 col-md-12 col-xl-3 col-xxl-3 bg-light rounded-5 p-3 mt-3" >
+                    <h3 class="text-primary fw-bold"> Бесплатное обучение </h3>
+                    <p>
+                        Обучение полностью бесплатно, без обязательств. Участникам предоставляется все необходимое
+                        для прохождения курса. По окончании обучения участники получают сертификат Школы 21.
+                    </p>
+                </div>
             </div>
 
         </div>
