--- a/src/main/resources/templates/blocks/home/about4.html
+++ b/src/main/resources/templates/blocks/home/about4.html
@@ -3,16 +3,31 @@
   <div class="bg-light text-dark px-4 py-5 text-left ">
 
     <div class="py-5">
-      <h2 class="display-5 fw-bold text-dark">Трудоустройство</h2>
-
-      <div class="col-lg-6 ">
+      <div class="row">
+      <h2 class="display-3 fw-bold text-dark">Трудоустройство</h2>
+      <br>
+        <br>
+        <br>
+      <div class="col-xs-12 col-sm-12 col-md-6 col-xl-6 col-xxl-6">
         <p class="fs-5 mb-4">
-          Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
-          popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid
-          system, extensive prebuilt components, and powerful JavaScript plugins.
+          Во время учёбы в Школе 21 каждый участник проходит обязательную стажировку — работает по своему направлению в
+          течение 3-х месяцев. Для Школы 21 практика в IT-компании — такой же учебный проект, как и все остальные.
+          Участник сам выбирает компанию для стажировки и договаривается о её условиях. Если нужна помощь, Школа 21 поможет:
+        </p>
+        <br>
+
+        <ul class="fw-bold text-dark">
+          <li>проведёт карьерную консультацию и оценит резюме;</li>
+          <li>подготовит к собеседованию;</li>
+          <li>организует мероприятия с работодателями и предложит вакансии от компаний-партнёров.</li>
+        </ul>
+        <br>
+        <p class="fs-5 mb-4">
+          На стажировку выходят 100% участников Школы 21, и 95% из них уже получили предложения о постоянной работе.
         </p>
       </div>
-
+      <div class="col-xs-12 col-sm-12 col-md-6 col-xl-6 col-xxl-6" style="background-image: url(../img/home/element-big.svg);"></div>
+      </div>
     </div>
   </div>
 </div>
