--- a/src/main/resources/templates/blocks/footer/footer.html
+++ b/src/main/resources/templates/blocks/footer/footer.html
@@ -1,12 +1,11 @@
 <footer th:fragment="footer" class="container-fluid bg-dark ">
-    <div class="row">
+    <div class="row ">
         <div class="col-12 col-md mt-3">
-            <!--<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mb-2" role="img" viewBox="0 0 24 24"><title>Product</title><circle cx="12" cy="12" r="10"></circle><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"></path></svg>-->
             <img src="img/logo/logo.svg" width="100" height="80">
             <small class="d-block mb-3 text-muted">© 2017–2022</small>
         </div>
-        <div class="col-6 col-md">
-            <h5>Features</h5>
+        <div class="col-6 col-md mt-3">
+            <h5 class="text-light">Сервисы</h5>
             <ul class="list-unstyled text-small">
                 <li><a class="link-secondary" href="#">Cool stuff</a></li>
                 <li><a class="link-secondary" href="#">Random feature</a></li>
@@ -16,8 +15,8 @@
                 <li><a class="link-secondary" href="#">Last time</a></li>
             </ul>
         </div>
-        <div class="col-6 col-md">
-            <h5>Resources</h5>
+        <div class="col-6 col-md mt-3">
+            <h5 class="text-light">Дисциплины</h5>
             <ul class="list-unstyled text-small">
                 <li><a class="link-secondary" href="#">Resource name</a></li>
                 <li><a class="link-secondary" href="#">Resource</a></li>
@@ -25,8 +24,8 @@
                 <li><a class="link-secondary" href="#">Final resource</a></li>
             </ul>
         </div>
-        <div class="col-6 col-md">
-            <h5>Resources</h5>
+        <div class="col-6 col-md mt-3">
+            <h5 class="text-light">Соц. сети</h5>
             <ul class="list-unstyled text-small">
                 <li><a class="link-secondary" href="#">Business</a></li>
                 <li><a class="link-secondary" href="#">Education</a></li>
@@ -34,13 +33,10 @@
                 <li><a class="link-secondary" href="#">Gaming</a></li>
             </ul>
         </div>
-        <div class="col-6 col-md">
-            <h5>About</h5>
+        <div class="col-6 col-md mt-3">
+            <h5 class="text-light">О нас</h5>
             <ul class="list-unstyled text-small">
-                <li><a class="link-secondary" href="#">Team</a></li>
-                <li><a class="link-secondary" href="#">Locations</a></li>
-                <li><a class="link-secondary" href="#">Privacy</a></li>
-                <li><a class="link-secondary" href="#">Terms</a></li>
+                <li><a class="link-secondary" href="#">Команда</a></li>
             </ul>
         </div>
     </div>
