--- a/src/main/resources/templates/blocks/header/header.html
+++ b/src/main/resources/templates/blocks/header/header.html
@@ -1,8 +1,8 @@
 <div th:fragment="header">
-    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between  mb-4 border-bottom bg-dark opacity-75 ">
+    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between  mb-4 border-bottom bg-dark ">
         <a href="/dashboard" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
             <!--<svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>-->
-            <img src="img/logo/logo.png" width="100" height="80">
+            <img src="img/logo/logo.svg" width="100" height="80" class="mb-2 ms-2">
         </a>
 
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
@@ -17,7 +17,7 @@
                         Interesting
                     </button>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#"><button class="dropdown-item" type="button">News</button></a></li>
+                        <li><a class="dropdown-item" href="/news"><button class="dropdown-item" type="button">News</button></a></li>
                     </ul>
                 </div>
             </li>
@@ -25,8 +25,8 @@
 
         <div class="col-md-3 text-end p-3">
             <div class="dropdown">
-                <button class="btn btn-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Account
+                <button class="btn btn-success dropdown-toggle rounded-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    [[${usr.email}]]
                 </button>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="/profile"><button class="dropdown-item" type="button">Profile</button></a></li>
