--- a/src/main/resources/templates/pages/login/login.html
+++ b/src/main/resources/templates/pages/login/login.html
@@ -16,7 +16,7 @@
 
     <div class="col-md-3 text-end p-3">
         <a href="/#reg">
-            <button type="button" class="btn btn-success">Registration</button>
+            <button type="button" class="btn btn-success rounded-4">Подать заявку</button>
         </a>
     </div>
 </header>
@@ -34,7 +34,7 @@
         <div class="row align-items-center g-lg-5 py-5">
             <div class="col-lg-7 text-center text-lg-start">
                 <h1 class="display-4 fw-bold lh-1 mb-3">
-                    Login
+                    Войти в личный кабинет
                 </h1>
                 <div class="col-lg-10 fs-4">
                     <div th:if="${param.error}">
@@ -59,7 +59,7 @@
                         <label for="password">Password</label>
                     </div>
 
-                    <button class="w-100 btn btn-lg btn-success" type="submit">Login</button>
+                    <button class="w-100 btn btn-lg btn-success" type="submit">Войти</button>
                     <hr class="my-4">
                     <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
                 </form>
