--- a/src/main/resources/templates/pages/profile/profile.html
+++ b/src/main/resources/templates/pages/profile/profile.html
@@ -14,6 +14,17 @@
 <div th:insert="blocks/header/header :: header" class="sticky-top"></div>
 <!-- Content -->
 <div class="container-fluid">
+<div class="col-12 border rounded-5 shadow-lg mt-3 ms-3 me-3 mb-3">
+    <h3 class="ms-3 mt-3">[[${usr.name}]] [[${usr.lastname}]]</h3>
+    <img src="img/users/unknown.png" height="150px" class="rounded-5">
+    <p class="mt-2">Tel: [[${usr.tel}]]</p>
+    <p class="me-2">Email: [[${usr.email}]]</p>
+    <h6>Level 1</h6>
+    <p>Java Developer</p>
+    <p>Exp: 359</p>
+</div>
+</div>
+<div class="container-fluid">
     <!-- Update name -->
     <form action="/profile/upd_name" method="post" class="p-4 p-md-5">
         <div class="row">
