--- a/src/main/resources/templates/blocks/header/header.html
+++ b/src/main/resources/templates/blocks/header/header.html
@@ -2,7 +2,7 @@
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between  mb-4 border-bottom bg-dark ">
         <a href="/dashboard" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
             <!--<svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>-->
-            <img src="img/logo/logo.svg" width="100" height="80" class="mb-2 ms-2">
+            <img src="../img/logo/logo.svg" width="100" height="80" class="mb-2 ms-2">
         </a>
 
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
