--- a/src/main/resources/templates/blocks/footer/footer.html
+++ b/src/main/resources/templates/blocks/footer/footer.html
@@ -1,7 +1,7 @@
 <footer th:fragment="footer" class="container-fluid bg-dark ">
     <div class="row ">
         <div class="col-12 col-md mt-3">
-            <img src="img/logo/logo.svg" width="100" height="80">
+            <img src="../img/logo/logo.svg" width="100" height="80">
             <small class="d-block mb-3 text-muted">© 2017–2022</small>
         </div>
         <div class="col-6 col-md mt-3">
