--- a/src/main/resources/templates/pages/dashboard/dashboard.html
+++ b/src/main/resources/templates/pages/dashboard/dashboard.html
@@ -12,12 +12,13 @@
 <body>
 <!-- Menu -->
 <div th:insert="blocks/header/header :: header" class="sticky-top"></div>
+
 <!-- Content -->
 <section>
     <div class="container-fluid">
 
             <div class="row ">
-                <div class="col-6 border rounded-5 shadow-lg mt-3 ms-3 me-3 mb-3">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-xl-6 col-xxl-6  border rounded-5 shadow-lg mt-3 ms-3 me-3 mb-3">
                     <h3 class="ms-3 mt-3">[[${usr.name}]] [[${usr.lastname}]]</h3>
                     <img src="img/users/unknown.png" height="150px" class="rounded-5">
                     <p class="mt-2">Tel: [[${usr.tel}]]</p>
@@ -27,10 +28,22 @@
                     <p>Exp: 359</p>
                 </div>
 
-                <div class="container col-5 rounded-5 shadow-lg border mt-3 ms-3 me-3 mb-3">
+                <div class="container col-xs-12 col-sm-12 col-md-5 col-xl-5 col-xxl-5 rounded-5 shadow-lg border mt-3 ms-3 me-3 mb-3" >
                     <h3 class="ms-3 mt-3">События</h3>
-                    <div class="border" style="height: 250px;">
+                    <div class="container-fluid overflow-auto " style="height: 350px">
+                    <div class="row">
+                        <div class=" card container-fluid border mt-2 rounded-3" th:each="news : ${news}">
+                            <a class="link-dark" th:href="'/news/'+${news.id}" style="text-decoration: none;">
+                            <div class="row">
+                                <h5 class="card-title col-9">[[${news.title}]]</h5>
+                                <p class="col-3">22.05.2022</p>
+                            </div>
+                            <p class="card-text">[[${news.anons}]]</p>
+                            </a>
+                        </div>
                     </div>
+                    </div>
+                    <br>
                 </div>
 
             </div>
@@ -41,7 +54,7 @@
     <div class="container-fluid">
 
         <div class="row ">
-            <div class="col-6 border rounded-5 shadow-lg mt-3 ms-3 me-3 mb-3">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-xl-6 col-xxl-6 border rounded-5 shadow-lg mt-3 ms-3 me-3 mb-3">
                 <h3 class="ms-3 mt-3">Current project</h3>
                 <img src="img/users/unknown.png" height="150px" class="rounded-5">
                 <p class="mt-2">Tel: [[${usr.tel}]]</p>
@@ -51,7 +64,7 @@
                 <p>Exp: 359</p>
             </div>
 
-            <div class="container col-5 rounded-5 shadow-lg border mt-3 ms-3 me-3 mb-3">
+            <div class="container col-xs-12 col-sm-12 col-md-5 col-xl-5 col-xxl-5 rounded-5 shadow-lg border mt-3 ms-3 me-3 mb-3">
                 <h3 class="ms-3 mt-3">Current lecture: </h3>
                 <p></p>
                 <div class="border" style="height: 250px;">
