--- a/src/main/resources/templates/pages/news/single_news.html
+++ b/src/main/resources/templates/pages/news/single_news.html
@@ -6,8 +6,6 @@
     <!-- CSS only -->
    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-
-
 </head>
 <body>
 <!-- Menu -->
@@ -17,9 +15,10 @@
 <section>
     <div class="container-fluid">
             <div class="row ">
-                <div class="col-xs-12 col-sm-12 col-md-8 col-xl-8 col-xxl-8 border rounded-5 shadow-lg mt-3 ms-3 me-3 mb-3" th:each="news : ${news}">
+                <div class="col-xs-12 col-sm-12 col-md-8 col-xl-8 col-xxl-8 border rounded-5 shadow-lg mt-3 ms-3 me-3 mb-3" >
                     <h2 class="ms-3 mt-3">[[${news.title}]]</h2>
-                    <div th:insert="'blocks/news/'+${news.bodyNews} :: ${news.bodyNews}"></div>
+                    <!--<div th:insert="'blocks/news/'+${news.bodyNews} :: ${news.bodyNews}"></div>-->
+                    <div th:utext="${news.body}"></div>
                 </div>
 
                 <div class="container col-xs-12 col-sm-12 col-md-2 col-xl-2 col-xxl-2 rounded-5 shadow-lg border mt-3 ms-3 me-3 mb-3" >
