--- a/src/main/resources/templates/pages/news/update_news.html
+++ b/src/main/resources/templates/pages/news/update_news.html
@@ -33,7 +33,7 @@ $position-values: {
     </div>
     <div class="container mb-5">
 <!-- Form -->
-        <form class="needs-validation" novalidate="" action="/admin/update_news_${news.id}" method="post">
+        <form class="needs-validation" novalidate="" method="post">
             <div class="row g-5">
                 <!-- News List-->
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 order-md-last">
