--- a/src/main/resources/templates/pages/profile/profile.html
+++ b/src/main/resources/templates/pages/profile/profile.html
@@ -12,6 +12,8 @@
 <body>
 <!-- Menu -->
 <div th:insert="blocks/header/header :: header" class="sticky-top"></div>
+<!-- Admin panel-->
+<div th:insert="blocks/admin/admin_panel :: admin_panel" class="sticky-top top-100" style="margin-left: 30px;"></div>
 <!-- Content -->
 <div class="container-fluid">
 <div class="col-12 border rounded-5 shadow-lg mt-3 ms-3 me-3 mb-3">
