--- a/src/main/resources/templates/blocks/admin/admin_panel.html
+++ b/src/main/resources/templates/blocks/admin/admin_panel.html
@@ -29,7 +29,7 @@
           <li class="nav-item btn btn-dark">
             <div class="dropdown">
               <a class="nav-link link-light dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                News
+                Interesting
               </a>
               <ul class="dropdown-menu bg-dark" aria-labelledby="dropdownMenuButton1" style="width: 120px;">
                 <li class="nav-item btn btn-dark"><a class="nav-link link-light dropdown-item" href="/admin/add_news">News</a></li>
