--- a/src/main/resources/templates/pages/admin/admin.html
+++ b/src/main/resources/templates/pages/admin/admin.html
@@ -37,48 +37,48 @@ $position-values: {
             <div class="col-md-5 col-lg-4 order-md-last">
                 <h4 class="d-flex justify-content-between align-items-center mb-3">
                     <span class="text-success">User List</span>
-                    <span class="badge bg-success rounded-pill">3</span>
+                    <span class="badge bg-success rounded-pill">1</span>
                 </h4>
-                <ul class="list-group mb-3">
-                    <li class="list-group-item d-flex justify-content-between lh-sm">
-                        <div>
-                            <h6 class="my-0">Product name</h6>
-                            <small class="text-muted">Brief description</small>
-                        </div>
-                        <span class="text-muted">$12</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between lh-sm">
-                        <div>
-                            <h6 class="my-0">Second product</h6>
-                            <small class="text-muted">Brief description</small>
-                        </div>
-                        <span class="text-muted">$8</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between lh-sm">
-                        <div>
-                            <h6 class="my-0">Third item</h6>
-                            <small class="text-muted">Brief description</small>
-                        </div>
-                        <span class="text-muted">$5</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between bg-light">
-                        <div class="text-success">
-                            <h6 class="my-0">Promo code</h6>
-                            <small>EXAMPLECODE</small>
-                        </div>
-                        <span class="text-success">−$5</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between">
-                        <span>Total (USD)</span>
-                        <strong>$20</strong>
-                    </li>
-                </ul>
+                <div class="border border-success border-opacity-50 rounded overflow-auto" style="height:300px;">
+                    <ul class="list-group mb-3 ">
+
+                        <li class="list-group-item d-flex justify-content-between lh-sm">
+                            <div>
+                                <h6 class="my-0">Name Lastname</h6>
+                                <small class="text-muted">email / tel</small>
+                            </div>
+                            <span class="btn text-muted border border-success border-opacity-50 rounded-5 text-center" style="width: 45px;"> ok </span>
+                        </li>
+
+
+
+
+                    </ul>
+                </div>
             </div>
             <!-- Add User form -->
-            <div class="col-md-7 col-lg-8">
-                <h4 class="mb-3">New User</h4>
+            <div class="col-md-7 col-lg-8 border border-success border-opacity-50 rounded-5 ">
                 <form class="needs-validation" novalidate="" action="/admin" method="post">
-                    <div class="row g-3">
+                    <div class="row mt-2">
+                        <div class="col-6">
+
+                            <label for="username" class="form-label">Username</label>
+                            <div class="input-group has-validation">
+                                <span class="input-group-text">@</span>
+                                <input type="text" class="form-control" name="username" id="username" placeholder="Username"
+                                       required="">
+                                <div class="invalid-feedback">
+                                    Your username is required.
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <button class="w-100 btn btn-success btn-lg mt-4" type="submit">Add user</button>
+                        </div>
+
+                    </div>
+                    <div class="row g-3 mt-1">
                         <div class="col-sm-6">
                             <label for="firstName" class="form-label">Name</label>
                             <input type="text" class="form-control" name="name" id="firstName" placeholder="" value="" required="">
@@ -95,17 +95,7 @@ $position-values: {
                             </div>
                         </div>
 
-                        <div class="col-12">
-                            <label for="username" class="form-label">Username</label>
-                            <div class="input-group has-validation">
-                                <span class="input-group-text">@</span>
-                                <input type="text" class="form-control" name="username" id="username" placeholder="Username"
-                                       required="">
-                                <div class="invalid-feedback">
-                                    Your username is required.
-                                </div>
-                            </div>
-                        </div>
+
 
                         <div class="col-12">
                             <label for="password" class="form-label">Password <span
@@ -137,7 +127,7 @@ $position-values: {
 
                     <hr class="my-4">
 
-                    <button class="w-100 btn btn-success btn-lg" type="submit">Add user</button>
+
                 </form>
             </div>
         </div>
