--- a/src/main/resources/templates/pages/dashboard/dashboard.html
+++ b/src/main/resources/templates/pages/dashboard/dashboard.html
@@ -9,36 +9,80 @@
 
 
 </head>
-<body>
+<body class="">
 <!-- Menu -->
 <div th:insert="blocks/header/header :: header" class="sticky-top"></div>
-
+<!-- Admin panel-->
+<div th:insert="blocks/admin/admin_panel :: admin_panel" class="sticky-top top-100" style="margin-left: 30px;"></div>
 <!-- Content -->
 <section>
     <div class="container-fluid">
 
             <div class="row ">
-                <div class="col-xs-12 col-sm-12 col-md-6 col-xl-6 col-xxl-6  border rounded-5 shadow-lg mt-3 ms-3 me-3 mb-3">
-                    <h3 class="ms-3 mt-3">[[${usr.name}]] [[${usr.lastname}]]</h3>
-                    <img src="img/users/unknown.png" height="150px" class="rounded-5">
-                    <p class="mt-2">Tel: [[${usr.tel}]]</p>
-                    <p class="me-2">Email: [[${usr.email}]]</p>
-                    <h6>Level 1</h6>
-                    <p>Java Developer</p>
-                    <p>Exp: 359</p>
+                <div class="col-xs-12 col-sm-12 col-md-12 col-xl-12 col-xxl-12  border border-success border-opacity-50  rounded-5 shadow-lg mt-3 ms-3  mb-3 bg-light"
+                     style="width:95%;">
+                    <div class="row">
+                        <div class="col-9">
+                            <h3 class="ms-3 mt-3 fw-bold">[[${usr.name}]] [[${usr.lastname}]]</h3>
+                            <p class="ms-2 mt-2 lead">Tel: [[${usr.tel}]]</p>
+                            <p class="ms-2 me-2 lead">Email: [[${usr.email}]]</p>
+                            <div class="row">
+                                <h6 class="ms-2 col-3 fw-bold">Level 1</h6>
+                                <p class=" col-3 lead">Exp: 359</p>
+                            </div>
+                            <div class="ms-2 me-2 border border-success border-opacity-50 rounded-5">
+                                <div class="progress">
+                                    <div class="progress-bar bg-success"
+                                         role="progressbar"
+                                         style="width: 25%;"
+                                         aria-valuenow="25"
+                                         aria-valuemin="0"
+                                         aria-valuemax="100">25%</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <img src="img/users/unknown.png" height="150px" class="rounded-5 mt-5 mb-5">
+                        </div>
+                    </div>
+                    <div class="ms-4 border border-success border-opacity-50 rounded-5 me-4 mb-3 text-center">
+                        <p class="lead fw-bold ">
+                            Peer poins:  <strong class="text-success">5</strong> ;
+                        </p>
+                    </div>
                 </div>
 
-                <div class="container col-xs-12 col-sm-12 col-md-5 col-xl-5 col-xxl-5 rounded-5 shadow-lg border mt-3 ms-3 me-3 mb-3" >
-                    <h3 class="ms-3 mt-3">События</h3>
+
+
+                <div class="container col-xs-12 col-sm-12 col-md-5 col-xl-5 col-xxl-5 rounded-5 shadow-lg border mt-3 ms-3 me-3 mb-3 bg-light border border-success border-opacity-50 " style="max-width:95%;">
+                    <h3 class="ms-3 mt-3">Новости</h3>
                     <div class="container-fluid overflow-auto " style="height: 350px">
                     <div class="row">
-                        <div class=" card container-fluid border mt-2 rounded-3" th:each="news : ${news}">
-                            <a class="link-dark" th:href="'/news/'+${news.id}" style="text-decoration: none;">
-                            <div class="row">
-                                <h5 class="card-title col-9">[[${news.title}]]</h5>
-                                <p class="col-3">22.05.2022</p>
+
+                        <div class="card border border-success border-opacity-50 rounded-5 mt-3" th:each="news : ${news}">
+                            <a th:href="'/news/'+${news.id}" style="text-decoration: none;">
+                            <div class="card-header bg-success text-light opacity-50 rounded-5 mt-2">
+                                <div class="row">
+                                    <div class="col-6">
+                                        <h5>@author</h5>
+                                    </div>
+                                    <div class="col-6">
+                                        <p>22.06.2022</p>
+                                    </div>
+                                </div>
                             </div>
-                            <p class="card-text">[[${news.anons}]]</p>
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <h4 class="card-title text-success">
+                                            [[${news.title}]]
+                                        </h4>
+                                        <p class="card-text text-dark">
+                                            [[${news.anons}]]
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
                             </a>
                         </div>
                     </div>
@@ -47,31 +91,6 @@
                 </div>
 
             </div>
-    </div>
-</section>
-
-<section>
-    <div class="container-fluid">
-
-        <div class="row ">
-            <div class="col-xs-12 col-sm-12 col-md-6 col-xl-6 col-xxl-6 border rounded-5 shadow-lg mt-3 ms-3 me-3 mb-3">
-                <h3 class="ms-3 mt-3">Current project</h3>
-                <img src="img/users/unknown.png" height="150px" class="rounded-5">
-                <p class="mt-2">Tel: [[${usr.tel}]]</p>
-                <p class="me-2">Email: [[${usr.email}]]</p>
-                <h6>Level 1</h6>
-                <p>Java Developer</p>
-                <p>Exp: 359</p>
-            </div>
-
-            <div class="container col-xs-12 col-sm-12 col-md-5 col-xl-5 col-xxl-5 rounded-5 shadow-lg border mt-3 ms-3 me-3 mb-3">
-                <h3 class="ms-3 mt-3">Current lecture: </h3>
-                <p></p>
-                <div class="border" style="height: 250px;">
-                </div>
-            </div>
-
-        </div>
     </div>
 </section>
 <!-- Footer -->
