--- a/src/main/resources/templates/pages/news/single_news.html
+++ b/src/main/resources/templates/pages/news/single_news.html
@@ -10,7 +10,8 @@
 <body>
 <!-- Menu -->
 <div th:insert="blocks/header/header :: header" class="sticky-top"></div>
-
+<!-- Admin panel-->
+<div th:insert="blocks/admin/admin_panel :: admin_panel" class="sticky-top top-100" style="margin-left: 30px;"></div>
 <!-- Content -->
 <section>
     <div class="container-fluid">
