--- a/src/main/resources/templates/blocks/header/header.html
+++ b/src/main/resources/templates/blocks/header/header.html
@@ -11,6 +11,19 @@
                     <button type="button" class="btn btn-success">Dashboard</button>
                 </a>
             </li>
+
+            <li class="ms-1 me-1">
+                <div class="dropdown">
+                    <button class="btn btn-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Learning
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="/lecture"><button class="dropdown-item" type="button">Current Lecture</button></a></li>
+                        <li><a class="dropdown-item" href="/learning_map"><button class="dropdown-item" type="button">Learning map</button></a></li>
+                    </ul>
+                </div>
+            </li>
+
             <li class="ms-1 me-1">
                 <div class="dropdown">
                     <button class="btn btn-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
