--- a/src/main/resources/templates/blocks/admin/admin_panel.html
+++ b/src/main/resources/templates/blocks/admin/admin_panel.html
@@ -39,7 +39,7 @@
             </div>
           </li>
           <li class="nav-item btn btn-dark">
-            <a class="nav-link link-light" href="#">Lecture</a>
+            <a class="nav-link link-light" href="/lecture">Lecture</a>
           </li>
           <li class="nav-item btn btn-dark">
             <a class="nav-link link-light" href="#">Project</a>
